[package]
name = "rustbsp"
version = "0.1.0"
authors = ["Nico de Poel <ndepoel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
image = "0.23.4"
bitflags = "1.2.1"
cgmath = "0.17"
winit = "0.22"
vulkano = "0.19"
vulkano-win = "0.19"
vulkano-shaders = "0.19"