[package]
name = "rustbsp"
version = "0.1.0"
authors = ["Nico de Poel <ndepoel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
image = "0.23"
bitflags = "1.3"
cgmath = "0.18"
winit = "0.24"
vulkano = "0.23"
vulkano-win = "0.23"
vulkano-shaders = "0.23"
itertools = "0.14.0"
